Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

30-Jun-2010 Ian MacLennan
 # [#21126] Token Error on Installation
 # [#20964] Token error on logon
 # [#21150] Restore 1.5 ability for multiple categories for banner module

30-Jur-2010 Mark Dexter
 # Assets table for uncategorised categories in sample data (Elin Waring)

30-Jun-2010 Jean-Marie Simonet
 # [#21169] "Save & New" toolbar button in "Templates Manager: Edit Style" saves an empty template. Thanks Joseph
 # [#21170] Changes made in description after toggling the editor are not saved. Thanks CY Lee.
 $ [#21257] Inaccurate string in contact. Thanks Elin.
 $ Correcting key typo.
 # [#21255] Module modal - missing module assignment description. Thanks Bill.

29-Jun-2010 Ian MacLennan
 # [#20959] Single Newsfeed Display Options parameters
 # [#21125] Article manager - view created by - details
 # [#21187] Template styles filter does not display admin templates
 + [#21028] Add function that returns the current documents MIME type
 # [#20871] Print view page navigation

29-Jun-2010 Jean-Marie Simonet
 # [#20836] Capitalization of "toolbar-popup-Popup". Thanks Matt. + some
 # [#21224] Alias has trailing dash when there is a space following the word
 # [#21231] Search Component Using the same variable. Thanks Bill.
 # [#21233] New Category Image Window Not 100%. Thanks Bill.
 $ Creating keys/strings for Authentification plugins errors.
 # [#21229] Article titles not displayed in category list. Thanks Elin.
 
-------------------- 1.6.0 Beta4 Release [28-Jun-2010] ------------------

28-Jun-2010 Ian MacLennan
 # [#21180] [IE8] Cannot create new menu due to JS error
 # [#21197] session timeout while editing article in backend, keepalive issue
 # [#21201] Warning to change name of htaccess.txt when selecting mod_rewrite is missing
 # [#21213] mod_syndicate class missing