@@ -16,3 +16,11 @@ MOD_ARTICLES_CATEGORIES_FIELD_SHOW_CHILDREN_LABEL="Child Categories"
 MOD_ARTICLES_CATEGORIES_FIELD_SHOW_DESCRIPTION_DESC="Displays or not categories descriptions"
 MOD_ARTICLES_CATEGORIES_FIELD_SHOW_DESCRIPTION_LABEL="Category Descriptions"
 MOD_ARTICLES_CATEGORIES_XML_DESCRIPTION="This module displays a list of categories from one parent category."
+MOD_ARTICLES_CATEGORIES_H1="H1"
+MOD_ARTICLES_CATEGORIES_H2="H2"
+MOD_ARTICLES_CATEGORIES_H3="H3"
+MOD_ARTICLES_CATEGORIES_H4="H4"
+MOD_ARTICLES_CATEGORIES_H5="H5"
+MOD_ARTICLES_CATEGORIES_H6="H6"
+MOD_ARTICLES_CATEGORIES_TITLE_HEADING_LABEL="Heading style"
+MOD_ARTICLES_CATEGORIES_TITLE_HEADING_DESC="Set the heading style to use"
