@@ -9,11 +9,15 @@
 
 // no direct access
 defined('_JEXEC') or die;
+foreach ($list as $item) :
 
-foreach ($list as $item) : ?>
-	<li>
+?>
+	<li> <?php $levelup=$item->level-$startLevel -1; ?>
+  <h<?php echo $params->get('item_heading')+ $levelup; ?>>
 		<a href="<?php echo JRoute::_(ContentHelperRoute::getCategoryRoute($item->id)); ?>">
 		<?php echo $item->title;?></a>
+   </h<?php echo $params->get('item_heading')+ $levelup; ?>>
+
 		<?php
 		if($params->get('show_description', 0))
 		{
@@ -21,6 +25,7 @@ foreach ($list as $item) : ?>
 		}
 		if($params->get('show_children', 0) && (($params->get('maxlevel', 0) == 0) || ($params->get('maxlevel') >= ($item->level - $startLevel))) && count($item->getChildren()))
 		{
+
 			echo '<ul>';
 			$temp = $list;
 			$list = $item->getChildren();
@@ -29,5 +34,5 @@ foreach ($list as $item) : ?>
 			echo '</ul>';
 		}
 		?>
-	</li>
+ </li>
 <?php endforeach; ?>
