@@ -31,6 +31,7 @@ $ -> Language fix or change
  # [#21126] Token Error on Installation
  # [#20964] Token error on logon
  # [#21150] Restore 1.5 ability for multiple categories for banner module
+ # [#21212] Head tags for mod_articles_categories
 
 30-Jur-2010 Mark Dexter
  # Assets table for uncategorised categories in sample data (Elin Waring)
